--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
             android:exported="true" />
         <activity android:name=".menu"
             android:exported="true" />
+        <activity android:name=".instructions"
+            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
