Added Edit Emergency services Page and fixed some minor errors

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
             android:exported="true" />
         <activity android:name=".instructions"
             android:exported="true" />
+        <activity android:name=".EditSOS"
+            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
