--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,10 @@
             android:exported="true" />
         <activity android:name=".EditSOS"
             android:exported="true" />
-
+        <activity android:name=".EmergencyServices"
+            android:exported="true" />
+        <activity android:name=".EmergenceyContact"
+            android:exported="true" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
