--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project"
-        tools:ignore="ExtraText">
+        tools:ignore="ExtraText,ForegroundServicePermission">
         tools:targetApi="31">
         <receiver android:name=".NotificationReceiver" />
         <meta-data
@@ -38,13 +38,17 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".SplashActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Project">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
         </activity>
         <activity
             android:name=".register"
@@ -70,9 +74,7 @@
             android:exported="true" />
         <activity android:name=".geofencing"
             android:exported="true" />
-        <service
-            android:name=".LocationService"
-            android:foregroundServiceType="location" />
+        <service android:name=".LocationService" android:foregroundServiceType="location" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
